--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "s3vm-pines"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
-readme = "README.qmd"
+readme = "README.md"
 packages = [{include = "s3vm_pines"}]
 
 [tool.poetry.dependencies]
