--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "s3vm-pines"
-version = "0.1.10"
+version = "0.1.11"
 description = "A study on Multiclass S3VM for IndianPines"
 authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
 maintainers = ["Kotaro SONODA <kotaro1976@gmail.com>"]
@@ -9,7 +9,7 @@ keywords = ['S3VM', 'IndianPines']
 license = "MIT"
 readme = "README.md"
 packages = [{include = "s3vm_pines"}]
-include = ["mybook/_book", "mybook/*.ipynb"]
+#include = ["mybook/_book", "mybook/*.ipynb"]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
@@ -25,6 +25,7 @@ indianpines = {git = "https://github.com/helmenov/indianpines.git"}
 scipy = "^1.9.0"
 jupyter = "^1.0.0"
 notebook = "^6.4.12"
+jupyter-cache = "^0.5.0"
 
 [build-system]
 requires = ["poetry-core"]
