--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "s3vm-pines"
-version = "0.1.22"
+version = "0.1.23"
 description = "A study on Multiclass S3VM for IndianPines"
 authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
 maintainers = ["Kotaro SONODA <kotaro1976@gmail.com>"]
@@ -12,7 +12,7 @@ packages = [{include = "s3vm_pines"}]
 #include = ["mybook/_book", "mybook/*.ipynb"]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.11"
+python = "^3.11"
 SciencePlots = "^1.0.9"
 pandas = "^1.5.2"
 matplotlib = "^3.6.2"
