--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,36 @@
-[tool.poetry]
+[project]
 name = "s3vm-pines"
-version = "0.1.23"
+version = "0.1.24"
 description = "A study on Multiclass S3VM for IndianPines"
-authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
-maintainers = ["Kotaro SONODA <kotaro1976@gmail.com>"]
+authors = [
+    { name = "Kotaro SONODA", email = "kotaro1976@gmail.com" }
+]
 repository = 'https://github.com/helmenov/s3vm_pines'
 keywords = ['S3VM', 'IndianPines']
-license = "MIT"
+dependencies = [
+    "numpy>=2.1.3",
+    "pandas>=2.2.3",
+    "matplotlib>=3.9.2",
+    "indianpines @ git+https://github.com/helmenov/indianpines.git",
+]
 readme = "README.md"
-packages = [{include = "s3vm_pines"}]
-#include = ["mybook/_book", "mybook/*.ipynb"]
-
-[tool.poetry.dependencies]
-python = "^3.11"
-SciencePlots = "^1.0.9"
-pandas = "^1.5.2"
-matplotlib = "^3.6.2"
-numpy = "^1.23.5"
-#indianpines = {git = "https://github.com/helmenov/indianpines.git"}
-qns3vm = {git = "https://github.com/helmenov/qns3vm.git"}
-indianpines = {git = "https://github.com/helmenov/indianpines.git"}
-
-[tool.poetry.group.dev.dependencies]
-scipy = "^1.9.0"
-jupyter = "^1.0.0"
-notebook = "^6.4.12"
-jupyter-cache = "^0.5.0"
+requires-python = ">= 3.8"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+dev-dependencies = [
+    "scipy>=1.14.1",
+    "jupyter>=1.1.1",
+    "notebook>=7.2.2",
+    "jupyter-cache>=1.0.0",
+]
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/s3vm_pines"]
